--- a/online-excalidraw-front/package.json
+++ b/online-excalidraw-front/package.json
@@ -17,6 +17,7 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@excalidraw/excalidraw": "^0.15.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
