--- a/online-excalidraw-front/package.json
+++ b/online-excalidraw-front/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-macros": "^3.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "lodash": "^4.17.21",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
