--- a/online-excalidraw-back/src/main/resources/application.properties
+++ b/online-excalidraw-back/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.sql=DEBUG
 logging.level.jpa=DEBUG
+
+#base url
+server.servlet.context-path=/api
