--- a/online-excalidraw-front/package.json
+++ b/online-excalidraw-front/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-macros": "^3.1.0",
     "eslint": "8.42.0",
@@ -31,6 +32,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sockjs": "^0.3.24",
+    "stomp-websocket": "^2.3.4-next",
     "tailwindcss": "3.3.2",
     "twin.macro": "^3.3.1",
     "typescript": "5.1.3"
