--- a/online-excalidraw-front/package.json
+++ b/online-excalidraw-front/package.json
@@ -28,12 +28,15 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "lodash": "^4.17.21",
+    "net": "^1.0.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.1",
     "stomp-websocket": "^2.3.4-next",
+    "stompjs": "^2.3.3",
     "tailwindcss": "3.3.2",
     "twin.macro": "^3.3.1",
     "typescript": "5.1.3"
