--- a/online-excalidraw-front/package.json
+++ b/online-excalidraw-front/package.json
@@ -18,6 +18,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@excalidraw/excalidraw": "^0.15.2",
+    "@tanstack/react-query": "^4.29.14",
+    "@tanstack/react-query-devtools": "^4.29.14",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -33,6 +35,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "stomp-websocket": "^2.3.4-next",
