--- a/online-excalidraw-front/package.json
+++ b/online-excalidraw-front/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@excalidraw/excalidraw": "^0.15.2",
+    "@mui/base": "^5.0.0-beta.4",
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
     "@types/node": "20.2.5",
